# vigilia

./: .gitignore  VIGILIA_ARCHITECTURE.md  farol_architecture.html  vigilia_schema.sql
.github/workflows/: daily-sync.yml
backend/: .gitignore  Dockerfile  pyproject.toml  railway.toml
backend/app/: main.py
backend/app/analysis/: clustering.py  constitutional_scorer.py  party_discipline.py
backend/app/api/v1/routes/: analysis.py  bills.py  clusters.py  farol.py  legislators.py  pipeline.py  stats.py  sync.py
backend/app/core/: config.py
backend/app/db/: __init__.py  session.py
backend/app/farol/: chat.py  classifier.py  retriever.py  session.py
backend/app/ingestion/: camara_client.py  orientation_pipeline.py  sync_pipeline.py  tag_pipeline.py  tse_pipeline.py
backend/app/models/: __init__.py  bill.py  cluster.py  constitution.py  donor.py  legislator.py  legislator_theme.py  party.py  session.py  theme.py  vote.py
backend/app/pipeline/: __init__.py  orchestrator.py  stages.py
backend/scripts/: audit_vote_quality.py  fetch_camara_data.py  sync_via_rest.py  test_camara_api.py  test_farol_queries.py
frontend/: package-lock.json  package.json
frontend/.claude/: launch.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analises/: page.tsx
frontend/app/coalicoes/: page.tsx
frontend/app/deputados/: page.tsx
frontend/app/metodologia/: page.tsx
frontend/app/projetos/: page.tsx
frontend/components/analises/: ConstitutionalRiskByCluster.tsx  DonorVoteHeatmap.tsx  PartyCohesion.tsx  StateMap.tsx  (+4 more)
frontend/lib/: api.ts
(+8 files in other folders)
